# pdm_summary

./: .gitignore  README.md  summary.tex
euh-emm/: Cargo.toml
euh-emm/src/: distributions.rs  main.rs
presentation/: presentation.tex
r-bmg/: bmg.r  ecm.r
summary/: EPFLreport.sty  bib.bib  summary.tex
